@@ -1,3 +1,14 @@
+Mon Apr 19 13:44:16 2004  Chad Elliott  <elliott_c@ociweb.com>
+
+        * modules/Creator.pm:
+        * modules/ProjectCreator.pm:
+
+          When subtracting values from mapped keywords, we must expand
+          template values in order to ensure that the values that are being
+          subtracted are actually removed.  This has a side effect of
+          expanding template values during subtraction even if the project
+          creator type does not normally expand template values.
+
 Fri Apr 16 08:05:19 2004  Chad Elliott  <elliott_c@ociweb.com>
 
         * prj_install.pl:
